# pgsync

./: .env.example  .gitignore  README.md  alembic.ini  config.py  docker-compose.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scheduler.py  session_manager.py  utils.py
connector/: bigquery_destination.py  bigquery_loader.py  postgres_extractor.py  postgres_source.py  transformer.py
core/: base.py  jobs.py
migrations/: README  env.py
migrations/versions/: 471e4447ec94_create_initial_schema.py  559bbcb91aad_add_sync_tables.py  8e2fcc1feb5e_add_connection_settings.py  9eadb457b0ce_add_destinations_rename_connections.py  c07f2d06f6b3_description.py  e6ec600f7dcc_alter_connection_settings.py  f3fd2813dd0f_add_schema_version_table.py
models/: api.py  connection_api.py  connection_settings_api.py  database.py  destination_api.py
pipeline/: extract.py
route/: connection_settings.py  connections.py  destinations.py  extraction.py  extractions.py  jobs.py  source_db.py  sources.py  sync_tables.py
scripts/integration_test/: 03_fetch_source_schema.py  06_create_sync_table.py  07_list_sync_tables.py  08_get_sync_table.py  09_update_sync_table.py  10_delete_sync_table.py  11_toggle_sync_table.py  12_create_connection_setting.py  13_list_connection_setting.py  14_get_connection_setting.py  15_update_connection_setting.py  16_delete_connection_setting.py  17_toggle_connection_setting.py  _utils.py  (+1 more)
services/: bigquery.py  postgres.py  redis.py
source/: postgres.py
worker/: celery_app.py  job_manager.py  redis_client.py  tasks.py
(+69 files in other folders)
