[project]
name = "pgsync"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.4.0",
    "croniter>=6.0.0",
    "fastapi>=0.115.11",
    "psycopg[binary]>=3.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[tool.ruff.lint]
ignore = ["F811", "E712"]

[dependency-groups]
dev = [
    "alembic>=1.15.1",
    "requests>=2.32.3",
]
